k8s/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: demo
spec:
  selector:
    app: service-a
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  - name: dubbo
    port: 20881
    targetPort: 20881
