k8s/service-c-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-c
  namespace: demo
spec:
  selector:
    app: service-c
  ports:
  - name: http
    port: 8083
    targetPort: 8083
  - name: dubbo
    port: 20883
    targetPort: 20883
